# hello-rat

./: .envrc  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml
src/: app.rs  main.rs
