[package]
name = "hello-rat"
version = "0.1.0"
edition = "2024"
description = "rat practice"
authors = ["Jonir Rings <i@jonirrings.com>"]
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3"
clap = { version = "4.5", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6"
config = "0.15"
crossterm = { version = "^0.29", features = ["serde", "event-stream"] }
derive_deref = "1.1"
directories = "6.0"
futures = "0.3"
human-panic = "2.0"
json5 = "0.4"
lazy_static = "1.5"
libc = "0.2"
pretty_assertions = "1.4.1"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
strip-ansi-escapes = "0.2"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }

[build-dependencies]
anyhow = "1.0"
vergen-gix = { version = "1.0", features = ["build", "cargo"] }

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.